--- a/register.html
+++ b/register.html
@@ -11,12 +11,16 @@
         <h2>User Registration</h2>
         <form action="register.php" method="POST"> 
             <div class="form-group">
-                <label for="fullname">Full Name:</label>
-                <input type="text" id="fullname" name="fullname" required>
+                <label for="username">Full Name:</label>
+                <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number:</label>
+                <input type="phone" id="phone" name="phone" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
@@ -26,8 +30,10 @@
                 <label for="confirm_password">Confirm Password:</label>
                 <input type="password" id="confirm_password" name="confirm_password" required>
             </div>
-            <button type="submit">Register</button>
+            <input type="submit" name="submit" value="Register">
         </form>
     </div>
+    
+    <script src="js/register.js" type="text/javascript"></script>
 </body>
 </html>
