--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>User Registration</h2>
-        <form action="register.php" method="POST"> 
+        <form action="register.php" method="POST" id="registration"> 
             <div class="form-group">
                 <label for="username">Full Name:</label>
                 <input type="text" id="username" name="username" required>
