--- a/login.html
+++ b/login.html
@@ -7,18 +7,24 @@
     <link rel="stylesheet" href="css/login.css"> 
 </head>
 <body>
-    <div class="container">
-        <h2>User Login</h2>
+    <div class="login-box">
+        <h2>Login</h2>
         <form action="login.php" method="POST" id="login"> 
-            <div class="form-group">
-                <label for="email_user_id">Email/User Id:</label>
-                <input type="text" id="email_user_id" name="email_user_id" required>
+            <div class="user-box">
+                <input type="text" id="email_phone" name="email_phone" required>
+                <label>Email/Phone</label>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
+            <div class="user-box">
                 <input type="password" id="password" name="password" required>
+                <label>Password</label>
             </div>
-            <input type="submit" name="submit" value="Login">
+            <div id="submit_btn">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <input id="input_submit" type="submit" name="submit" value="Login">
+            </div>
         </form>
     </div>
     
