--- a/register.html
+++ b/register.html
@@ -7,30 +7,36 @@
     <link rel="stylesheet" href="css/register.css"> 
 </head>
 <body>
-    <div class="container">
+    <div class="login-box">
         <h2>User Registration</h2>
         <form action="register.php" method="POST" id="registration"> 
-            <div class="form-group">
-                <label for="username">Full Name:</label>
+            <div class="user-box">
                 <input type="text" id="username" name="username" required>
+                <label>Full Name</label>
             </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
+            <div class="user-box">
                 <input type="email" id="email" name="email" required>
+                <label>Email</label>
             </div>
-            <div class="form-group">
-                <label for="phone">Phone Number:</label>
-                <input type="phone" id="phone" name="phone" required>
+            <div class="user-box">
+                <input type="text" id="phone" name="phone" required>
+                <label>Phone Number</label>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
+            <div class="user-box">
                 <input type="password" id="password" name="password" required>
+                <label>Password</label>
             </div>
-            <div class="form-group">
-                <label for="confirm_password">Confirm Password:</label>
+            <div class="user-box">
                 <input type="password" id="confirm_password" name="confirm_password" required>
+                <label>Confirm Password</label>
             </div>
-            <input type="submit" name="submit" value="Register">
+            <div id="submit_btn">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <input id="input_submit" type="submit" name="submit" value="Register">
+            </div>
         </form>
     </div>
     
