add_category & add course section add

--- a/add_course.html
+++ b/add_course.html
@@ -54,7 +54,7 @@
                         <input class="form-input" id="course_image" name="course_image" type="file" accept="image/*" required>
                     </label>
                     <br>
-                    <button class="log-in">Add Course</button>
+                    <input class="add-course-btn" type="submit" value="Add Course">
                 </div>
             </div>
         </form>
